--- a/app/views/layouts/_panel.html.erb
+++ b/app/views/layouts/_panel.html.erb
@@ -12,7 +12,7 @@
     <% end %>
   </li>
   <li>
-    <%= link_to '#' do %>
+    <%= link_to posts_path do %>
         <%= fa_icon 'list 2x' %>
         <span class="label">Posts</span>
     <% end %>
@@ -29,19 +29,19 @@
 
 <ul class="links social_media">
   <li>
-    <%= link_to '#' do %>
+    <%= link_to 'https://twitter.com/kublilonzo' do %>
         <%= fa_icon 'twitter 1x' %>
         <span class="label small">Twitter</span>
     <% end %>
   </li>
   <li>
-    <%= link_to '#' do %>
+    <%= link_to 'https://www.facebook.com/kuba.kopys' do %>
       <%= fa_icon 'facebook-square 1x' %>
       <span class="label small">Facebook</span>
     <% end %>
   </li>
   <li>
-    <%= link_to '#' do %>
+    <%= link_to 'https://github.com/Jejkej' do %>
         <%= fa_icon 'github 1x' %>
         <span class="label small">Github</span>
     <% end %>
