--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -77,7 +77,7 @@ body {
   text-shadow: #fff 0px 1px 0px;
 }
 
-.side_panel {
+.side_panel, .controls {
   padding-top: 200px;
   color: white;
   float: left;
@@ -153,6 +153,7 @@ body {
     }
   }
 }
+
 .content {
   margin-left: 41%;
   width: 40%;
@@ -163,5 +164,36 @@ body {
     content: "";
     display: table;
     clear: both;
+  }
+}
+
+.container {
+  .controls {
+    padding-top: 0px;
+    color: white;
+    width: 8%;
+    background: #FFA939;
+    height: 35%;
+    position: fixed;
+    float: right;
+    -webkit-box-shadow: 2px 0px 10px 0px rgba(50, 50, 50, 1);
+    -moz-box-shadow: 2px 0px 10px 0px rgba(50, 50, 50, 1);
+    box-shadow: 2px 0px 10px 0px rgba(50, 50, 50, 1);
+    border-radius: 15px;
+    right: 2%;
+    top: 5%;
+    ul.links {
+      li {
+        a {
+          color: lighten(#FFBA64, 20%);
+        }
+        &:hover {
+          background: lighten(#FFBA64, 20%);
+          i, span {
+            color: #FFA939;
+          }
+        }
+      }
+    }
   }
 }
