--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -219,7 +219,7 @@ body {
     padding: 10px 0;
     text-shadow: none;
   }
-  .info {
+  .notice {
     color: #9F6000;
     background-color: #FEEFB3;
   }
