--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -75,7 +75,7 @@ $pale-orange: #FF8E64;
     border-top: #EEE 2px solid;
     border-bottom: #EEE 2px solid;
   }
-  p.post_content {
+  .post_content {
     margin: 0 auto 2em;
     font-size: 1.10em;
     line-height: 2em;
