--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -4,8 +4,8 @@
   <div class="about_me">
     <%= image_tag 'me.jpg', class: 'me_img' %>
     <p class="big">Something about me</p>
-    My name is Jakub Kopyś and I am web developer wanna-be from Poland. I am passionate about Ruby on Rails, but I try keep up
-    with any trends in web development - recently I met Elixir and Phoenix and loved it as much as Rails.
+    My name is Jakub Kopyś and I am Ruby on Rails developer wanna-be from Poland. I am passionate about Ruby on Rails,
+    but I try keep up with any trends in web development - recently I met Elixir and Phoenix and loved it as much as Rails.
     Additionally I am a student of AGH University of Science and Technology in Krakow. Currently I am looking for my
     first job  or an internship as a Rails programmer.
     <p class="big">Contact</p>
