--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -6,7 +6,7 @@
 
     <div class="field clearfix">
       <%= f.label :content %>
-      <%= f.text_area :content %>
+      <%= f.cktext_area :content %>
     </div>
 
     <%= f.submit %>
