--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="show_post" id="post_#{@post.id}">
   <h1 class="title"><%= @post.title %></h1>
   <h2 class="created_at"><%= @post.created_at.strftime("%d %b %Y") %></h2>
-  <p class="post_content"><%= @post.content %></p>
+  <div class="post_content"><%= simple_format(@post.content) %></div>
 </div>
