--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -13,7 +13,7 @@
     chat with me feel free to contact me by:
     <p class="small">email: jakub.kopys@tlen.pl</p>
     <p class="small">Phone: +48 531 969 029</p>
-    <p class="small">I suggest You check out <%= link_to 'my CV', pages_basic_download_path %> first!</p>
+    <p class="small">Download <%= link_to 'my CV', pages_basic_download_path %></p>
     <p class="big">The Question that bothers You</p>
     <p class="small">By now You all probably ask yourselves one question: "Who the hell is the dude behind on
     the photo?". Well It is high time I enlighten You - It is my lovely twin brother Dawid.
