--- a/app/views/layouts/_panel.html.erb
+++ b/app/views/layouts/_panel.html.erb
@@ -6,7 +6,7 @@
 
 <ul class="links">
   <li class="button">
-    <%= link_to download_path class: 'link' do%>
+    <%= link_to download_path, target: '_blank' do%>
       <%= fa_icon 'file 2x' %>
       <span class="label CV">CV</span>
     <% end %>
